# python_binding_examples

meson_example/: example.py  install_editable.sh  meson.build  pyproject.toml
meson_example/src/: core.cpp
meson_example/src/meson_example/: __init__.py
scikit_build_example/: CMakeLists.txt  README.md  example.py  install_editable.sh  pyproject.toml
scikit_build_example/src/: example.cpp
scikit_build_example/src/scikit_build_example/: __init__.py  __init__.pyi
